# rust-car-rental-api

./: .env.example  Cargo.toml  README.md  insomnia.json
src/: main.rs
src/controllers/: mod.rs
src/controllers/auth/: access_token.rs  login.rs  me.rs  mod.rs  register.rs
src/controllers/brands/: delete.rs  index.rs  mod.rs  show.rs  store.rs  update.rs
src/controllers/cars/: delete.rs  index.rs  mod.rs  show.rs  store.rs  update.rs
src/controllers/rentals/: cancel.rs  index.rs  mine.rs  mod.rs  store.rs
src/middleware/: auth.rs
src/repositories/: mod.rs  rental.rs
src/utils/: access_token.rs
