[package]
name = "rust-car-rental-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
async-trait = "0.1.68"
chrono = { version ="0.4.24", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.162", features = ["derive"] }
sqlx = { version = "0.6.3", features = ["runtime-actix-rustls", "postgres", "chrono", "uuid", "macros"] }
uuid = { version = "1.3.2", features = ["serde", "v4"] }
